--- a/Fotos.html
+++ b/Fotos.html
@@ -29,7 +29,7 @@
     
     <div class="vidro">
         
-        <h1>vidro</h1>
+        <h1>ALGUMAS CENAS</h1>
 
         <div class="cards-content">
             <div class="card banner-1">Robbert Pattison - Batman</div>
